--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react-router-dom": "^6.22.0",
+    "firebase": "^10.8.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@iconscout/react-unicons": "^1.1.6",
@@ -14,12 +16,13 @@
     "framer-motion": "^6.2.9",
     "react": "^18.0.0",
     "react-apexcharts": "^1.4.0",
-    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.0.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
